--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,6 +10,15 @@ spring:
     open-in-view: false
   freemarker:
     expose-request-attributes: true
+  mail:
+    host: smtp.yandex.ru
+    username: dk-st31-eventmanager@yandex.ru
+    #password: eventmanager
+    password: zmlquqcwfwqjymod
+    port: 465
+    protocol: smtps
+mail:
+  debug: true
 #      hibernate:
 #        ddl-auto: none
 #      properties:
